# hackkosice2024

./: README.md  test.py
board/: .editorconfig  platformio.ini
board/assets/: note.json  sequence.json
board/lib/core/: button.cpp  button.h  buzzer.cpp  buzzer.h  display.cpp  display.h  led.cpp  led.h  stream.cpp  stream.h
board/src/: constants.h  display.cpp  display.h  main.cpp
diagrams/: Pipeline_DataStructure.drawio
serial_communicator_api/: README.md  fileff.py  main.py  pyproject.toml
serial_communicator_api/src/serial_communicator_api/: main.py
server/: main.py  wav.py
web/: package-lock.json  package.json
web/src/: App.js  NoteGrid.jsx  PlayerInput.jsx  T2VForm.jsx  index.js  styles.css
